# API-Project

./: .gitignore  Dockerfile  README.md  gunicorn.service  nginx  pyproject.toml
.github/workflows/: build-deploy.yml
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
db/versions/: 04ae4348ce7d_add_foreign_key_to_post_table.py  4e8d9bfa1b12_add_the_rest_of_the_columns_in_the_post_.py  5a9da50cf1e6_add_content_column_to_posts_table.py  5b600c69019a_add_user_table.py  6a775e04d506_create_post_table.py  8d633377f13f_adding_phone_number_to_user.py  c1e5fc43fab5_add_votes.py
tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
