[tool.poetry]
name = "learning-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
sqlalchemy = ">=1.4 <2.0"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0.post1"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
secretstorage = "^3.3.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
